# snapsnap

./: Readme.md  meson.build  meson_options.txt
binja-snapdump/: __init__.py  snapdump_view.py
doc/: snapdump.md
include/snapsnap/: blockhasher.hh  bumpallocator.hh  inputdb.hh  loader.hh  mmu.hh  random.hh  utility.hh  vm.hh
include/snapsnap/arch/: arm.hh  arm64.hh  m68k.hh  mips.hh  sparc.hh  unicorn_internal.hh  x86.hh
scripts/: snapsnap-tools.py
src/: blockhasher.cpp  bumpallocator.cpp  inputdb.cpp  loader_coredump.cpp  loader_snapdump.cpp  main.cpp  mmu.cpp  random.cpp  snapsnap_internal.cpp  snapsnap_internal.hh  utility_user_regs.cpp  vm.cpp
subprojects/: unicorn.wrap
tests/: meson.build
tests/microdns-fuzz/: fuzz.c  fuzzer.cpp  meson.build
tests/microdns-fuzz/microdns-0.2.0/: meson.build
